<resources>
    <string name="app_name">InPost Recruitment Task</string>

    <string name="status_adopted_at_sorting_center">Received at the Sorting Facility</string>
    <string name="status_sent_from_sorting_center">Sent from the Sorting Facility</string>
    <string name="status_adopted_at_source_branch">Received at the source branch</string>
    <string name="status_sent_from_source_branch">Sent from the source branch</string>
    <string name="status_avizo">Return to the Branch</string>
    <string name="status_confirmed">In preparation</string>
    <string name="status_created">Shipment created</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_other">Other status</string>
    <string name="status_out_for_delivery">Out for delivery</string>
    <string name="status_pickup_time_expired">Pickup deadline expired</string>
    <string name="status_ready_to_pickup">Ready for pickup</string>
    <string name="status_returned_to_sender">Return to sender</string>
    <string name="status_not_ready">Not ready</string>
    <string name="status_na">na</string>

    <string name="menu_ready_for_pickup">Ready for pickup</string>
    <string name="menu_remaining">Remaining</string>
    <string name="menu_all">All</string>
    <string name="tracking_number">TRACKING NUMBER</string>
    <string name="status">STATUS</string>
    <string name="sender">SENDER</string>
    <string name="more">More</string>
    <string name="received">RECEIVED</string>
    <string name="pickup_deadline">PICKUP DEADLINE</string>
</resources>
